<resources>
    <string name="app_name">Климат в серверной</string>
    <string name="title_home">Главная</string>
    <string name="title_dashboard">История</string>
    <string name="title_notifications">События</string>
    <string name="login">Login</string>
    <string name="password">Пароль</string>
    <string name="sign_in">Войти</string>
    <string name="required_temp">Заданная температура:</string>
    <string name="plus">+</string>
    <string name="minus">-</string>
    <string name="real_state">Текущее состояние:</string>
    <string name="real_temp">Текущая температура: %s</string>
    <string name="real_box_temp">Текущая температура в коробке: %s</string>
    <string name="actions">Действия:</string>
    <string name="set_on_security">Поставить на охрану</string>
    <string name="set_off_security">Снять с охраны</string>
    <string name="on_security">Поставлено на охрану</string>
    <string name="off_security">Снято с охраны</string>
    <string name="security_is_violated">Нарушена безопасность периметра</string>
    <string name="security_is_not_violated">Безопасность периметра в норме</string>
    <string name="fan_on">Вентилятор включен</string>
    <string name="fan_off">Вентилятор выключен</string>
    <string name="cond_on">Кондиционер включен</string>
    <string name="cond_off">Кондиционер выключен</string>
    <string name="security_set_by_user">%1$s пользователем %2$s в %3$s</string>
    <string name="two_yesterday">Позавчера</string>
    <string name="yesterday">Вчера</string>
    <string name="today">Сегодня</string>
    <string name="security_violated">Нарушена безопасность периметра</string>
    <string name="time_date">%1$s:%2$s %3$s.%4$s.%5$s</string>
</resources>