<?xml version="1.0" encoding="utf-8"?>
<layout>

    <data>

        <variable
            name="raspState"
            type="ru.spiridonov.smartservermobile.domain.entity.RaspState" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".presentation.ui.home.HomeFragment">


        <ProgressBar
            android:id="@+id/pb_loading"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:visibility="visible"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:visibility="gone" />

        <TextView
            android:id="@+id/tv_required_temp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:text="@string/required_temp"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/et_required_temp"
            android:layout_width="70dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:ems="10"
            android:inputType="number"
            android:textAlignment="center"
            android:textColor="@color/primaryTextColor"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_required_temp" />

        <Button
            android:id="@+id/btn_plus_temp"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:text="@string/plus"
            android:textSize="20sp"
            app:layout_constraintStart_toEndOf="@+id/et_required_temp"
            app:layout_constraintTop_toTopOf="@+id/et_required_temp" />

        <Button
            android:id="@+id/btn_minus_temp"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:text="@string/minus"
            android:textSize="20sp"
            app:layout_constraintEnd_toStartOf="@+id/et_required_temp"
            app:layout_constraintTop_toTopOf="@+id/et_required_temp" />


        <TextView
            android:id="@+id/tv_real_state"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:text="@string/real_state"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/et_required_temp" />

        <TextView
            android:id="@+id/tv_real_temp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="8dp"
            android:textColor="@color/primaryTextColor"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_real_state"
            app:setRealTemp="@{raspState.raspState}"
            tools:text="@string/real_temp" />

        <TextView
            android:id="@+id/tv_real_box_temp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="8dp"
            android:textColor="@color/primaryTextColor"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_real_temp"
            app:setRealBoxTemp="@{raspState.raspState}"
            tools:text="@string/real_box_temp" />

        <TextView
            android:id="@+id/tv_real_fan"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="8dp"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_real_box_temp"
            app:setRealFan="@{raspState.raspState}"
            tools:text="Вентилятор включен" />

        <TextView
            android:id="@+id/tv_security_violated"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="8dp"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_real_fan"
            app:setSecurityViolated="@{raspState.securityViolated}"
            tools:text="Безопасность периметра в норме" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>